<resources>
    <string name="app_name">Talk</string>
    <string name="yourName">Enter your name</string>
    <string name="yourNick">Enter your nickname</string>
    <string name="yourEmail">Enter your email</string>
    <string name="yourPassword">Enter your password</string>
    <string name="testEmail">bobrov@mail.ru</string>
    <string name="yourCountryCode">+7</string>
    <string name="alreadyRegistered">Already registered?</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="signIn">Sign in</string>
    <string name="enterCorrectName">Enter correct name</string>
    <string name="minimumNickNameLength">Minimum nickname length 4 characters</string>
    <string name="firstEnterYourEmail">First enter your email</string>
    <string name="firstAddYourPhoto">First add your photo</string>
    <string name="enterAnotherNick">This nick is already taken</string>
    <string name="removeSpaces">Remove spaces</string>
    <string name="firstEnterYourPassword">First enter your password</string>
    <string name="incorrectCode">Incorrect Code</string>
    <string name="tagPhoto">Empty photo</string>
    <string name="statusUserSignIn">True</string>
    <string name="statusUserLoginTrue">True</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itemUserName">Андрей</string>
    <string name="pictureLoadFailure">Photo loading error</string>
    <string name="findSearchViewTextHint">Find people</string>
    <string name="lastMessage">You: hello!</string>
    <string name="onBackPressedExitApplication">Press again to exit the application</string>
    <string name="onBackPressedLastFragment">Press again to return last window</string>
    <string name="messageHint">Click to enter message</string>
    <string name="date">30/09/2024</string>
    <string name="testMessage">Hello</string>
    <string name="startConversation">It is empty here for now. Start a conversation with someone</string>
</resources>