<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundMain"
    tools:context=".view.fragment.RegistrationFragment">

    <ImageView
        android:id="@+id/mainBack"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="15dp"
        android:alpha="0.8"
        android:src="@drawable/drawable_main_back_talk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/titan_one"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/nameAppColor"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainBack" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp"
        app:endIconMode="clear_text"
        android:hint="@string/yourEmail"
        app:cursorColor="@color/nameAppColor"
        app:hintTextColor="@color/colorGrey"
        android:textColorHint="@color/colorGrey"
        app:placeholderTextColor="@color/nameAppColor"
        app:boxStrokeColor="@color/nameAppColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:startIconDrawable="@drawable/drawable_icon_email"
        app:startIconTint="@color/nameAppColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="18sp"
            android:gravity="start|center_vertical"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/yourPassword"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:cursorColor="@color/nameAppColor"
        app:hintTextColor="@color/colorGrey"
        android:textColorHint="@color/colorGrey"
        app:placeholderTextColor="@color/nameAppColor"
        app:boxStrokeColor="@color/nameAppColor"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        app:startIconDrawable="@drawable/drawable_icon_password"
        app:startIconTint="@color/nameAppColor"
        app:endIconTint="@color/nameAppColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:gravity="start|center_vertical"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/alreadyRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/alreadyRegistered"
        android:textColor="@color/nameAppColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/statePressedIcon"
        app:indicatorSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNext"
        app:layout_constraintEnd_toEndOf="@+id/buttonNext"
        app:layout_constraintStart_toStartOf="@+id/buttonNext"
        app:layout_constraintTop_toBottomOf="@+id/alreadyRegistered"
        app:trackColor="@color/nameAppColor"
        app:trackThickness="6dp" />


    <Button
        android:id="@+id/buttonNext"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/login"
        android:textStyle="bold"
        app:strokeColor="@color/nameAppColor"
        app:strokeWidth="2dp"
        android:backgroundTint="@color/colorStart"
        android:textColor="@color/nameAppColor"
        app:icon="@drawable/drawable_icon_registered"
        app:iconTint="@color/nameAppColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alreadyRegistered" />



</androidx.constraintlayout.widget.ConstraintLayout>