<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:layout_gravity="top"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardCornerRadius="50dp"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/userPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:visibility="invisible"
            app:srcCompat="@drawable/drawable_icon_insert_photo" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:indeterminate="true"
            android:layout_gravity="center"
            app:indicatorColor="@color/statePressedIcon"
            app:indicatorSize="30sp"
            app:trackColor="@color/nameAppColor"
            app:trackThickness="3dp" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/itemUserName"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/lastMessage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:fontFamily="sans-serif"
        android:text="@string/lastMessage"
        android:textColor="@color/colorGrey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/timeSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:maxLines="1"
        android:text="@string/date"
        android:textColor="@color/colorGrey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userName" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="5dp"
        android:background="@color/colorGrey"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>
