<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundMain"
    tools:context=".view.fragment.UserDataFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        app:cardCornerRadius="25dp"
        app:strokeWidth="2dp"
        app:cardElevation="10dp"
        app:strokeColor="@color/nameAppColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/style_insert_photo"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/insertPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:scaleType="centerCrop"
                android:tag="@string/tagPhoto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/drawable_icon_insert_photo" />

            <ImageView
                android:id="@+id/buttonSetImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/drawable_icon_person_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        app:boxStrokeWidth="2dp"
        app:cursorColor="@color/nameAppColor"
        app:hintTextColor="@color/colorGrey"
        android:textColorHint="@color/colorGrey"
        app:placeholderTextColor="@color/nameAppColor"
        app:boxStrokeColor="@color/nameAppColor"
        app:boxStrokeWidthFocused="3dp"
        app:endIconMode="clear_text"
        android:hint="@string/yourName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:startIconDrawable="@drawable/drawable_icon_insert_photo"
        app:startIconTint="@color/nameAppColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="18sp"
            android:gravity="start|center_vertical"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp"
        app:cursorColor="@color/nameAppColor"
        app:hintTextColor="@color/colorGrey"
        android:textColorHint="@color/colorGrey"
        app:placeholderTextColor="@color/nameAppColor"
        app:boxStrokeColor="@color/nameAppColor"
        app:endIconMode="clear_text"
        android:hint="@string/yourNick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName"
        app:startIconDrawable="@drawable/drawable_icon_user_nick"
        app:startIconTint="@color/nameAppColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personNick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="18sp"
            android:gravity="start|center_vertical"
            android:digits="0,1,2,3,4,5,6,7,8,9,*,qwertzuiopasdfghjklyxcvbnm"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonNext"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorStart"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/nameAppColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:icon="@drawable/drawable_icon_registered"
        app:iconTint="@color/nameAppColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNickname"
        app:strokeColor="@color/nameAppColor"
        app:strokeWidth="2dp" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/statePressedIcon"
        app:indicatorSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNext"
        app:layout_constraintEnd_toEndOf="@+id/buttonNext"
        app:layout_constraintStart_toStartOf="@+id/buttonNext"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNickname"
        app:trackColor="@color/nameAppColor"
        app:trackThickness="6dp" />

</androidx.constraintlayout.widget.ConstraintLayout>